--- a/Views/Yuksekogretim/Karsilastir.cshtml
+++ b/Views/Yuksekogretim/Karsilastir.cshtml
@@ -81,7 +81,7 @@
 </div>
 
 <div class="text-center mt-4">
-    <a class="btn btn-secondary" href="@Url.Action("Index", "Universite")">← Ana Sayfa</a>
+    <a class="btn btn-secondary" href="@Url.Action("Index", "Yuksekogretim")">← Ana Sayfa</a>
 </div>
 
 <script>
