--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,11 +34,11 @@
                         <i class="fas fa-university me-1"></i>Yükseköğretim İstatistikleri
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="/Yuksekogretim?year=2020_2021">2020-2021</a></li>
-                        <li><a class="dropdown-item" href="/Yuksekogretim?year=2021_2022">2021-2022</a></li>
-                        <li><a class="dropdown-item" href="/Yuksekogretim?year=2022_2023">2022-2023</a></li>
-                        <li><a class="dropdown-item" href="/Yuksekogretim?year=2023_2024">2023-2024</a></li>
-                        <li><a class="dropdown-item" href="/Yuksekogretim?year=2024_2025">2024-2025</a></li>
+                        <li><a class="dropdown-item" asp-controller="Yuksekogretim" asp-action="YilMenu" asp-route-year="2020_2021">2020-2021</a></li>
+                        <li><a class="dropdown-item" asp-controller="Yuksekogretim" asp-action="YilMenu" asp-route-year="2021_2022">2021-2022</a></li>
+                        <li><a class="dropdown-item" asp-controller="Yuksekogretim" asp-action="YilMenu" asp-route-year="2022_2023">2022-2023</a></li>
+                        <li><a class="dropdown-item" asp-controller="Yuksekogretim" asp-action="YilMenu" asp-route-year="2023_2024">2023-2024</a></li>
+                        <li><a class="dropdown-item" asp-controller="Yuksekogretim" asp-action="YilMenu" asp-route-year="2024_2025">2024-2025</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
